# embedding-template-matching

./: .gitignore  annotate.py  arrow.stl  camera.py  dataset.py  infer.py  init_template.py  model.py  readme.md  requirements.txt  setup.py  train.py  utils.py  vis.py
emb_template/: action_server.py  action_server_test.py  annotate.py  annotate_cad.py  camera.py  collect_images.py  dataset.py  infer.py  init_cam.py  init_cam_info.py  init_object.py  init_object_from_cad.py  init_object_no_cad.py  init_table.py  init_template.py  model.py  renderer.py  train.py  unet.py  utils.py  vis.py  vis_data.py  vis_template.py
ros/src/emb_template_ros/: CMakeLists.txt  package.xml
ros/src/emb_template_ros/action/: getPose.action
